tests/negative/recursion_limit.tx
// EXPECTED: RUNTIME_ERROR
// Description: Verify that infinite recursion eventually crashes the program (Stack Overflow).

function infinite(n: int) {
    // No base case
    infinite(n + 1);
}

infinite(1);
